web_mapping complete and start of s16

--- a/basics/theory_S1_to_S14.ipynb
+++ b/basics/theory_S1_to_S14.ipynb
@@ -2689,6 +2689,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Section 16: Fixing Programming Errors\n",
+        "## Syntax Errors\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
